# mimido

./: .eslintignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pwa-assets.config.ts  svelte.config.js  tailwind.config.cjs  vite.config.js
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/auth/mimido2da18b53/: cli-inputs.json
amplify/backend/auth/mimido3032df03/: cli-inputs.json
amplify/backend/types/: amplify-dependent-resources-ref.d.ts
docker/dynamodb/: shared-local-instance.db
etc/: litefs.yml
prisma/: schema.prisma
prisma/migrations/20240514153344_init/: migration.sql
prisma/migrations/20240514192602_init/: migration.sql
src/: .env.example  LICENSE  app.css  app.d.ts  app.html  app.pcss  bindings.ts  hooks.client.ts  hooks.server.js  hooks.server.ts  result.ts  safelist-tailwind.txt
src-tauri/: Cargo.toml  diesel.toml  mimido.db  rustc-ice-2025-07-16T14_39_51-82295.txt  rustc-ice-2025-07-16T14_39_51-82296.txt  task.pest  tauri.conf.json  test.db
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/fixtures/: basic.ics  todo.ics  todo_date.ics  with_timezone.ics
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-03-04-204732_initial/: down.sql  up.sql
src-tauri/migrations/2025-03-12-194737_add_props/: down.sql  up.sql
src-tauri/migrations/2025-03-17-132913_add_custom_props/: down.sql  up.sql
src-tauri/migrations/2025-03-17-150519_add_has_rrule/: down.sql  up.sql
src-tauri/migrations/2025-03-17-154939_add_unique_to_uuid/: down.sql  up.sql
src-tauri/migrations/2025-04-07-180549_add_todo_values/: down.sql  up.sql
src-tauri/migrations/2025-04-07-183643_add_todo_base/: up.sql
src-tauri/migrations/2025-04-15-194027_rrule_string/: down.sql  up.sql
src-tauri/migrations/2025-07-08-181821_add_default_calendar/: down.sql  up.sql
src-tauri/migrations/2025-07-10-144018_add_sync/: down.sql  up.sql
src-tauri/migrations/2025-07-23-145156_add_cmp_etag/: down.sql  up.sql
src-tauri/migrations/2025-08-08-152219_more-todo/: down.sql  up.sql
src-tauri/migrations/2025-08-08-162742_todo-dates/: down.sql  up.sql
src-tauri/migrations/2025-08-08-163100_todo-completed-date/: down.sql  up.sql
src-tauri/migrations/2025-11-07-183256_vevent_optional_fields/: down.sql  up.sql
src-tauri/migrations/2025-11-07-184644_vtodo_optional_fields/: down.sql  up.sql
src-tauri/migrations/2025-12-23-194227_add_calendar_synced_at/: down.sql  up.sql
src-tauri/migrations/2025-12-26-144807_modify_cmp_synced_at/: down.sql  up.sql
src-tauri/migrations/2025-12-29-174958_add_out_of_sync/: down.sql  up.sql
src-tauri/src/: app_state.rs  caldav.rs  calendar_items.rs  commands.rs  db_conn.rs  lib.rs  main.rs  models.rs  schema.patch  schema.rs  util.rs
src-tauri/src/caldav/: create_calendar_component.rs  delete_calendar_component.rs  get_sync_report.rs  mod.rs  update_calendar_component.rs  util.rs
src-tauri/src/calendar_items/: component_props.rs  date_parser.rs  event_creator.rs  event_status.rs  event_tags.rs  event_type.rs  event_upsert.rs  input_traits.rs  mod.rs  recur.rs  rrule_parser.rs
src-tauri/src/calendar_items/event_date/: date_parser.rs  mod.rs  rrule_parser.rs
src-tauri/src/commands/: calendar.rs  components.rs  errors.rs  extended_event.rs  extended_todo.rs  mod.rs
src-tauri/src/models/: event.rs  mod.rs  model_traits.rs  server.rs  todo.rs  vcmp_builder.rs  vevent.rs  vtodo.rs
src/customTypings/: ical.d.ts
src/lib/: result.ts  stores.js  stores.ts  util.js  util.ts
src/lib/attachments/: inview.svelte.ts  shortcut.svelte.ts
src/lib/components/details-modal/: detail-modal.svelte  index.js  index.ts
src/lib/components/disclosure/: Disclosure.svelte  DisclosureGroup.svelte
src/lib/components/event/: event.svelte  index.js
src/lib/components/event-card/: event-card.svelte  index.js  index.ts
src/lib/components/event-creation-modal/: EventCreationModal.svelte
src/lib/components/event-time-row/: event-time-row.svelte  index.js
src/lib/components/filter-dropdown/: filter-dropwdown.svelte  index.ts
src/lib/components/glass-button/: GlassButton.svelte
src/lib/components/glass-button-group/: GlassButtonGroup.svelte  GlassGrouppedButton.svelte
src/lib/components/glass-checkbox/: GlassCheckbox.svelte
src/lib/components/glass-icon/: GlassIcon.svelte
src/lib/components/glass-input/: GlassInput.svelte
src/lib/components/hoverable-icon/: HoverableIcon.svelte
src/lib/components/md-editor/: index.ts  markdown.pcss  md-editor.svelte
src/lib/components/navigation/: Navigation.svelte  NavigationButton.svelte
src/lib/components/reload-prompt/: index.js  index.ts  reload-prompt.svelte
src/lib/components/task-box/: index.js  parser.js  parser.test.js  task-box.svelte
src/lib/components/task-form/: index.js  index.ts  task-form.svelte
src/lib/components/task-list/: TaskList.svelte  index.ts  task-list.svelte
src/lib/components/toggle/: Toggle.svelte
src/lib/parser/: index.js  index.ts  parser.test.js  parser.test.ts
src/lib/server/: google.js  inputItemBuilder.js
src/lib/server/calendar/: alarmSchema.js  alarmSchema.ts  index.js  index.ts  (+2 more)
src/lib/utils/: cognitoClient.ts  rrule.js  rrule.ts
src/routes/: +layout.server.js  +layout.server.ts  +layout.svelte  +layout.ts  +page.server.js  +page.server.ts  +page.svelte
src/routes/account/: +page.server.js  +page.server.ts  +page.svelte
src/routes/cognito/: +page.server.js  +page.server.ts  +page.svelte
src/routes/create/: +page.server.ts
src/routes/day/: +page.server.js  +page.server.ts  +page.svelte  +page.ts  Calendar.svelte
src/routes/events/: +server.js
src/routes/form/: +page.server.js  +page.svelte
src/routes/list/: +page.server.js  +page.server.ts  +page.svelte
src/routes/oauth/: +page.server.js  +page.server.ts
src/routes/parse/: +server.js  +server.ts
src/routes/servers/: +page.svelte  +page.ts
src/stores/: eventUpserter.svelte.ts  times.svelte.ts  times.ts
(+19 files in other folders)
