[package]
name = "mimido"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mimido_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.8", features = [
  "sqlite",
  "chrono",
  "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.1.0"
lazy_static = "1.4"
chrono = { version = "0.4.39", features = ["serde"] }
libdav = "0.9.1"
icalendar = { version = "0.16.12", features = ["serde", "serde_json"] }
http = "1.2.0"
tower-http = { version = "0.6.2", features = ["auth"] }
hyper-util = { version = "0.1.10", features = [
  "client",
  "client-legacy",
  "tokio",
] }
hyper-rustls = "0.27.5"
anyhow = "1.0.96"
futures = "0.3.31"
chrono-tz = "0.10.1"
strum = "0.27.1"
strum_macros = "0.27.1"
rrule = { version = "0.13.0", features = ["serde"] }
now = "0.1.3"
specta = { version = "=2.0.0-rc.22", features = ["chrono"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
regex = "1.11.1"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
tauri-plugin-log = "2"
log = "0.4.27"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
